# esp_opentelemetry_sdk

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
cmake/: threads-config.cmake
src/: pthread_stubs.c
